--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "@fortawesome/free-regular-svg-icons": "^5.8.2",
     "@fortawesome/free-solid-svg-icons": "^5.8.2",
     "@fortawesome/react-fontawesome": "^0.1.4",
+    "@types/react-dom": "^16.8.4",
+    "@types/react-redux": "^7.0.9",
+    "@types/react-router-dom": "^4.3.3",
     "firebase": "^6.0.2",
     "firebase-admin": "^7.4.0",
     "node-sass": "^4.12.0",
